<resources>
    <string name="app_name">PriceAppDriver</string>
    <!--    <string name="api_key">AIzaSyBduv61ywGy3e9mU6NJ_a7GHCf5oSbxT2w</string>-->
    <string name="api_key">AIzaSyCFB3_0jJQm20H2cPiVfANMjDhAmxlpUb8</string>

    <string name="create_account">Create Account</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="by_continuing_you_agree_to_our_terms_of_service_and_privacy_policy">By continuing you agree to our Terms of Service and Privacy Policy</string>
    <string name="first_name">Driver Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="password">Password</string>
    <string name="signup">Signup</string>
    <string name="send">Send</string>
    <string name="enter_email">Enter Email.</string>
    <string name="logout"><u>Logout</u></string>
    <string name="home">Home</string>
    <string name="setting">Setting</string>
    <string name="help">HELP</string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="privacy_policies">Privacy Policies</string>
    <string name="about">About</string>
    <string name="contact_us">Contact us</string>
    <string name="my_profile">My Profile</string>
    <string name="change_password">Change Password</string>
    <string name="completed">Completed</string>
    <string name="in_progress">In Progress</string>
    <string name="new1">New</string>
    <string name="all">All</string>
    <string name="please_select_the_reason_for_cancellation">Please select the reason<br /> for cancellation:</string>
    <string name="bank_details">Bank details</string>
    <string name="change_pass">Change Password</string>
    <string name="account_holder_name">Account Holder Name</string>
    <string name="bank_name">Bank Name</string>
    <string name="add_bank_detail">Add Bank Detail</string>
    <string name="add_abank">Add Bank Details</string>
    <string name="edit_bank_details">Edit Bank Details</string>
    <string name="terms_and_condi">Terms and Conditions</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="about_us">About Us</string>
    <string name="user_name">User Name</string>
    <string name="email">Email</string>
    <string name="message">Message</string>
    <string name="last_name">Last Name</string>
    <string name="address">Address</string>
    <string name="continue1">Continue</string>
    <string name="add_vehicle">Add Vehicle</string>
    <string name="add_doc">Add Document</string>
    <string name="upload_vehicle_image">Upload Vehicle Image</string>
    <string name="enter_first_name">Enter First Name.</string>
    <string name="enter_last_name">Enter Last Name.</string>
    <string name="enter_valid_email">Enter Valid Email.</string>
    <string name="please_enter_number">Enter Mobile Number.</string>
    <string name="please_enter_address">Enter Address.</string>
    <string name="please_enter_message">Please enter message.</string>
    <string name="please_enter_pass">Enter Password.</string>
    <string name="verify_now">Verify Now</string>
    <string name="please_enter_com_otp">Please Enter Otp.</string>
    <string name="enter_your_enail_and_will_send_nyou_instructions_on_how_to_reset_it">Enter your email and will send\nyou instructions on how to reset it.</string>
    <string name="msg_noInternet">Internet Connection Not Available</string>
    <string name="on_error">On error</string>
    <string name="select_image_from">Select Image From</string>
    <string name="permission_denied_boo">Permission Denied</string>
    <string name="enter_ifsc_code">Enter IFSC Code</string>
    <string name="account_number">Account Number</string>
    <string name="resend">Resend</string>
    <string name="verify">Verify</string>
    <string name="sent">Sent</string>
    <string name="verify_your_n_account">Verify your \n account</string>
    <string name="please_wait">Please wait.</string>
    <string name="vehicle_number">Vehicle Number</string>
    <string name="vehicle_type">Vehicle Type</string>
    <string name="vehicle_brand">Vehicle Brand</string>
    <string name="vehicle_model">Vehicle Model</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="enter_bank_detail">Enter Bank Name.</string>
    <string name="enter_holder">Enter Account Holder Name.</string>
    <string name="enter_vehicle_brand">Enter Vehicle Brand.</string>
    <string name="enter_vehicle_model">Enter Vehicle Model.</string>
    <string name="enter_vehicle_number">Enter Vehicle Number.</string>
    <string name="enter_vechile_color">Enter Vehicle Color.</string>
    <string name="please_ass_vehicle_image">Please add Vehicle Image.</string>
    <string name="manufecture_year">Manufecture Year</string>
    <string name="enter_menufecture_year">Enter Menufecture Year.</string>
    <string name="enter_number">Enter Number</string>
    <string name="enter_password">Enter Password</string>
    <string name="mobile">Mobile</string>
    <string name="forgot">Forgot Password</string>
    <string name="check_email">Please check mail</string>
    <string name="update">Update</string>
    <string name="enter_name">Enter Driver Name.</string>
    <string name="enter_user_name">Enter User Name.</string>
    <string name="my_vehicle">My Vehicle</string>
    <string name="edit_vechie">Edit Vehicle</string>
    <string name="save_changes">Save Changes</string>
    <string name="save">Save</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="new_password">New Password</string>
    <string name="current_password">Current Password</string>
    <string name="please_enter_old_pass">Please enter old password.</string>
    <string name="please_enter_confirm_password">Please enter confirm password.</string>
    <string name="password_mismatched">Please make sure your password match.</string>
    <string name="enter_new_password">Please enter new password.</string>
    <string name="old_password_mismatched">Wrong old password.</string>
    <string name="new_request">New Request</string>
    <string name="accept">Accept</string>
    <string name="submit">Submit</string>
    <string name="order_picked">Order Picked</string>
    <string name="order_delivered">Order Delivered</string>
    <string name="order_details">Order Detail</string>
    <string name="are_you_sure_picked_order">Are you sure you picked up order?</string>
    <string name="are_you_sure_delivered_order">Are you sure your order delivered?</string>
    <string name="i_dont_want_to_share">I don’t want to share</string>
    <string name="the_price_is_not_reasonable">The price is not reasonable</string>

</resources>