<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SettingAct">

    <include layout="@layout/header_layout" android:id="@+id/header"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/tvProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/my_profile"
                android:padding="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:fontFamily="@font/montserrat_regular"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp"
                />

            <TextView
                android:id="@+id/tvVechile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/my_vehicle"
                android:padding="@dimen/_20sdp"
                android:fontFamily="@font/montserrat_regular"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp"
                />

            <TextView
                android:id="@+id/tvTextPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/change_password"
                android:padding="@dimen/_20sdp"
                android:fontFamily="@font/montserrat_regular"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp"
                />

            <TextView
                android:id="@+id/bnkDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bank_details"
                android:padding="@dimen/_20sdp"
                android:fontFamily="@font/montserrat_regular"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/help"
                android:padding="@dimen/_20sdp"
                android:fontFamily="@font/montserrat_semibold"
                android:textColor="@color/tab_text_color"
                android:textSize="@dimen/_16sdp"
                />

            <TextView
                android:id="@+id/term"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/terms_conditions"
                android:padding="@dimen/_20sdp"
                android:fontFamily="@font/montserrat_regular"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp"
                />

            <TextView
                android:id="@+id/pp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/privacy_policies"
                android:padding="@dimen/_20sdp"
                android:fontFamily="@font/montserrat_regular"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp"
                />

            <TextView
                android:id="@+id/about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about"
                android:padding="@dimen/_20sdp"
                android:fontFamily="@font/montserrat_regular"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp"
                />

            <TextView
                android:id="@+id/contactUs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/contact_us"
                android:padding="@dimen/_20sdp"
                android:fontFamily="@font/montserrat_regular"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp"
                />

        </LinearLayout>

    </ScrollView>

</LinearLayout>
</layout>