<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <include
            android:id="@+id/layout_myProfile"
            layout="@layout/header_layout"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/_15sdp"
            android:layout_below="@id/layout_myProfile"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/current_password"
                android:textColor="@color/hint_color"
                android:textSize="@dimen/_11sdp"
                android:fontFamily="@font/montserrat_semibold"
                android:layout_marginTop="@dimen/_13sdp"
                />
            <EditText
                android:id="@+id/etPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/light_gray_border"
                android:padding="@dimen/_13sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:hint="@string/enter_password"
                android:textSize="@dimen/_12sdp"
                android:paddingStart="@dimen/_13sdp"
                android:textColor="@color/black"
                android:textColorHint="@color/hint_color"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:fontFamily="@font/montserrat_regular"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_password"
                android:textColor="@color/hint_color"
                android:textSize="@dimen/_11sdp"
                android:fontFamily="@font/montserrat_semibold"
                android:layout_marginTop="@dimen/_15sdp"
                />
            <EditText
                android:id="@+id/etNewPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/light_gray_border"
                android:padding="@dimen/_13sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:hint="@string/enter_password"
                android:textSize="@dimen/_12sdp"
                android:paddingStart="@dimen/_13sdp"
                android:textColor="@color/black"
                android:textColorHint="@color/hint_color"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:fontFamily="@font/montserrat_regular"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirm_new_password"
                android:textColor="@color/hint_color"
                android:textSize="@dimen/_11sdp"
                android:fontFamily="@font/montserrat_semibold"
                android:layout_marginTop="@dimen/_15sdp"
                />
            <EditText
                android:id="@+id/etNewConPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/light_gray_border"
                android:padding="@dimen/_13sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:hint="@string/enter_password"
                android:textSize="@dimen/_12sdp"
                android:paddingStart="@dimen/_13sdp"
                android:textColor="@color/black"
                android:textColorHint="@color/hint_color"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:fontFamily="@font/montserrat_regular"
                />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/bright_blue"
            android:textAllCaps="false"
            android:text="@string/save"
            android:textSize="@dimen/_12sdp"
            android:fontFamily="@font/montserrat_semibold"
            android:textColor="@color/white"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="@dimen/_25sdp"
            android:layout_margin="@dimen/_15sdp"
            />
    </RelativeLayout>

</layout>