<?xml version="1.0" encoding="utf-8"?>
<layout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".activities.LoginActivity"
        >
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cvCard"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:shape="ring"
            app:cardElevation="@dimen/_10sdp"
            android:elevation="@dimen/_10sdp"
            app:cardCornerRadius="@dimen/_25sdp"
            android:layout_margin="@dimen/_15sdp"
            >

            <ImageView
                android:layout_width="@dimen/_15sdp"
                android:layout_height="@dimen/_15sdp"
                android:src="@drawable/ic_back"
                android:layout_gravity="center"
                />
        </com.google.android.material.card.MaterialCardView>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true"
            android:paddingHorizontal="@dimen/_20sdp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="center"
                    >
                    <ImageView
                        android:layout_width="@dimen/_120sdp"
                        android:layout_height="@dimen/_100sdp"
                        android:src="@drawable/ic_app_logo"
                        android:layout_gravity="center_horizontal"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/login"
                        android:textColor="@color/hint_color"
                        android:textSize="@dimen/_25sdp"
                        android:fontFamily="@font/montserrat_bold"
                        android:layout_gravity="center_horizontal"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mobile"
                        android:textColor="@color/hint_color"
                        android:textSize="@dimen/_11sdp"
                        android:fontFamily="@font/montserrat_semibold"
                        android:layout_marginTop="@dimen/_15sdp"
                        />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:background="@drawable/et_bg"
                        >
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:orientation="horizontal"
                            >
                            <com.hbb20.CountryCodePicker
                                android:id="@+id/ccp"
                                android:layout_width="0dp"
                                android:layout_weight="0.3"
                                android:gravity="center"
                                app:ccp_textSize="12dp"
                                app:ccp_countryPreference="BE,BG,CZ,DK,DE,EE,IE,EL,ES,FR,HR,IT,CY,LV,LT,LU,HU,MT,NL,PL,PT,SI,SK,FI,SE,IS,NO,CH,ME,MK,AL,RS,TR"
                                app:ccp_defaultPhoneCode="91"
                                android:layout_marginRight="5dp"
                                android:layout_height="@dimen/_35sdp"/>
                            <EditText
                                android:id="@+id/etNumber"
                                android:layout_width="0dp"
                                android:backgroundTint="@color/white"
                                android:fontFamily="@font/montserrat_regular"
                                android:layout_height="wrap_content"
                                android:layout_weight="0.7"
                                android:textSize="@dimen/_12sdp"
                                android:hint="@string/enter_number"
                                android:imeOptions="actionNext"
                                android:inputType="number"
                                android:textColor="@color/black"
                                android:textColorHint="@color/hint_color"
                                />
                        </LinearLayout>

                    </RelativeLayout>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/password"
                        android:textColor="@color/hint_color"
                        android:textSize="@dimen/_11sdp"
                        android:fontFamily="@font/montserrat_semibold"
                        android:layout_marginTop="@dimen/_15sdp"
                        />

                    <EditText
                        android:id="@+id/etPass"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/et_bg"
                        android:padding="@dimen/_10sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:hint="@string/enter_password"
                        android:textSize="@dimen/_12sdp"
                        android:inputType="textPassword"
                        android:textColor="@color/black"
                        android:textColorHint="@color/hint_color"
                        android:imeOptions="actionDone"
                        android:fontFamily="@font/montserrat_regular"
                        />

                    <TextView
                        android:id="@+id/tv_forgot"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/forgot_password"
                        android:fontFamily="@font/montserrat_semibold"
                        android:layout_gravity="end"
                        android:textColor="@color/hint_color"
                        android:textSize="@dimen/_11sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        />
                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnLogin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bt_bg"
                        android:textAllCaps="false"
                        android:text="@string/login"
                        android:textSize="@dimen/_11sdp"
                        android:fontFamily="@font/montserrat_medium"
                        android:textColor="@color/white"
                        android:layout_marginTop="@dimen/_25sdp"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>
</layout>