<?xml version="1.0" encoding="utf-8"?>
<layout>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    >

    <include
        android:id="@+id/forgot_action"
        layout="@layout/header_layout"/>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/forgot_action">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_Logo"
                android:layout_width="@dimen/_120sdp"
                android:layout_height="@dimen/_120sdp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_30sdp"
                android:src="@drawable/ic_app_logo"
                android:scaleType="fitXY"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/_16sdp"
                android:layout_marginLeft="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/montserrat_semibold"
                android:text="@string/enter_your_enail_and_will_send_nyou_instructions_on_how_to_reset_it"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textSize="@dimen/_12sdp" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/et_bg"
                android:padding="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:hint="@string/enter_email"
                android:paddingStart="@dimen/_13sdp"
                android:textSize="@dimen/_12sdp"
                android:textColorHint="@color/hint_color"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:imeOptions="actionNext"
                android:fontFamily="@font/montserrat_regular"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSend"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                app:backgroundTint="@color/purple_700"
                app:rippleColor="@color/purple_200"
                app:cornerRadius="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_marginRight="@dimen/_15sdp"
                android:elevation="@dimen/_3sdp"
                android:outlineProvider="background"
                android:fontFamily="@font/montserrat_semibold"
                android:textAllCaps="false"
                android:outlineSpotShadowColor="@color/purple_200"
                android:text="@string/send"
                android:textColor="@color/white"
                android:textSize="@dimen/_16sdp"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_10sdp"
                android:gravity="center_horizontal">

            </RelativeLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</RelativeLayout>
</layout>