<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none"
            android:fillViewport="true"
            >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >
                <LinearLayout
                    android:id="@+id/llHeader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="#16A8B5"
                    >
                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="@dimen/_80sdp"
                        android:layout_height="@dimen/_80sdp"
                        android:src="@drawable/user_default"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/_40sdp"
                        android:id="@+id/ivProfilePic"
                        />

                    <TextView
                        android:id="@+id/tvUserName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="John Smith"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_marginBottom="@dimen/_30sdp"
                        android:fontFamily="@font/montserrat_bold"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_18sdp"
                        />
                </LinearLayout>
                <TextView
                    android:id="@+id/tvHome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/_40sdp"
                    android:fontFamily="@font/montserrat_bold"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_13sdp"
                    android:layout_below="@id/llHeader"
                    android:layout_marginLeft="@dimen/_30sdp"
                    />
                <TextView
                    android:id="@+id/tvSetting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/setting"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginBottom="@dimen/_30sdp"
                    android:fontFamily="@font/montserrat_bold"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_13sdp"
                    android:layout_below="@id/tvHome"
                    android:layout_marginLeft="@dimen/_30sdp"
                    />

                <TextView
                    android:id="@+id/tvLogout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/logout"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginBottom="@dimen/_40sdp"
                    android:fontFamily="@font/montserrat_bold"
                    android:textColor="@color/black"
                    android:layout_alignParentBottom="true"
                    android:textSize="@dimen/_13sdp"
                    android:layout_marginLeft="@dimen/_30sdp"
                    />

            </RelativeLayout>
        </ScrollView>
    </RelativeLayout>
</layout>